added github actions and aws config for auto deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,8 @@
-# first specify the version of docker compose
 version: '3'
-
-# set of list of services/containers that are going to be created when we run
-# docker compose up
 services:
-  # you can call the app what you want, here we choose "web"
   web:
-    # Specify the Dockerfile that we are going to use to create this container
     build:
-      # context: tells docker compose where we want all the files and folders
-      # used ot build this image to be pulled from
       context: .
-      # Sepcify the location of the dockerfile used to construct this service
-      # named "web"
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000" # <port outside of the container>:<port inside the container
-    volumes:
-      - /app/node_modules # this says "don't map a local folder up against node_modules in this container"
-      - .:/app # = map the cwd (.) to the app folder inside the container (/app)
-  # create a second service/container just for running tests
-  tests:
-    build:
-      # context: tells docker compose where we want all the files and folders
-      # used ot build this image to be pulled from
-      context: .
-      # Sepcify the location of the dockerfile used to construct this service
-      # named "web"
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules # this says "don't map a local folder up against node_modules in this container"
-      - .:/app # = map the cwd (.) to the app folder inside the container (/app)
-    # override the starting command when this test service is created
-    command: ["npm", "test"]
-
+      - '80:80'
